--- a/.github/workflows/client-app.yml
+++ b/.github/workflows/client-app.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./apps/client-app # Adjust to client-app directory
-        run: npm install --legacy-peer-deps
+        run: yarn install
 
       # - name: Run tests
       #   working-directory: ./apps/client-app # Adjust to client-app directory
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./apps/client-app # Adjust to client-app directory
-        run: npm install --legacy-peer-deps
+        run: yarn install
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
