--- a/apps/backend/auth-service/Dockerfile
+++ b/apps/backend/auth-service/Dockerfile
@@ -6,7 +6,7 @@ COPY package.json ./
 
 RUN npm install
 
-COPY tsconfig.json nodemon.json tsoa.json build-script.js ecosystem.config.js ./
+COPY tsconfig.json nodemon.json tsoa.json ecosystem.config.js ./
 COPY src ./src
 
 RUN npm run build
