--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
     "core-js": "^3.39.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "joi": "^17.13.3",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.0",
     "swagger-ui-express": "^5.0.1"
@@ -27,7 +29,7 @@
   "devDependencies": {
     "@datacatalog2024/ms-libs": "0.0.1",
     "@types/express": "^5.0.0",
-    "@types/jwt-decode": "^3.1.0",
+    "@types/joi": "^17.2.3",
     "@types/node": "^22.7.5",
     "@types/swagger-ui-express": "^4.1.6",
     "esbuild": "^0.24.0",
