create CI/CD auth-service v1

--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Configure npm to use GitHub Packages
         run: |
-          echo "@sokritha-sabaicode:registry=https://npm.pkg.github.com/" > ~/.npmrc
+          echo "@datacatalog2024:registry=https://npm.pkg.github.com/" > ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
 
       - name: Install dependencies
