--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -2,13 +2,11 @@ name: CI/CD Pipeline for Auth Service
 
 on:
   pull_request:
-    branches:
-      - google-conito
+    branches: [google-conito]
     paths:
       - "./apps/backend/auth-service/**"
   push:
-    branches:
-      - google-conito
+    branches: [google-conito]
     paths:
       - "./apps/backend/auth-service/**"
 
