--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -125,24 +125,48 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            # Load NVM and set up Node.js environment
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # Load nvm
-            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion" # Load nvm bash_completion
+            # Ensure NVM is installed
+            if [ ! -f /home/ubuntu/.nvm/nvm.sh ]; then
+            echo "NVM not found. Installing NVM..."
+            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+            export NVM_DIR="/home/ubuntu/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            fi
 
-            # Ensure the right version of Node is active
-            nvm install node
-            nvm use node
+            # Load NVM
+            export NVM_DIR="/home/ubuntu/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
 
-            # Navigate to the application directory and install dependencies
-            cd /home/ubuntu/apps/auth-service/build
+            # Ensure Node.js and NPM are installed
+            if ! type node > /dev/null 2>&1; then
+              echo "Node.js not found. Installing Node.js..."
+              nvm install 20
+              nvm use 20
+              nvm alias default 20
+            fi
+
+            # Ensure Yarn and PM2 are installed
+            if ! command -v yarn &> /dev/null; then
+              echo "Yarn not found. Installing Yarn..."
+              npm install -g yarn
+            fi
+
+            if ! command -v pm2 &> /dev/null; then
+              echo "PM2 not found. Installing PM2..."
+              npm install -g pm2
+            fi
+
+            # Navigate to application directory
+            cd /home/ubuntu/apps/build
+
+            # Install production dependencies
             yarn install --production
 
-            # Check if the PM2 process is running and manage accordingly
-            if pm2 show auth-service > /dev/null; then
+            # Restart or start the application
+            if pm2 show product-service > /dev/null; then
               echo "Application is running. Restarting..."
-              pm2 restart auth-service
+              pm2 restart product-service
             else
               echo "Application is not running. Starting..."
-              pm2 start app.js --name auth-service
+              pm2 start server.js --name product-service
             fi
