--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -125,48 +125,18 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            # Ensure NVM is installed
-            if [ ! -f /home/ubuntu/.nvm/nvm.sh ]; then
-            echo "NVM not found. Installing NVM..."
-            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
-            export NVM_DIR="/home/ubuntu/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            fi
+            # Load the full user environment for non-interactive shells
+            source /home/ubuntu/.nvm/nvm.sh
+            source /home/ubuntu/.profile
 
-            # Load NVM
-            export NVM_DIR="/home/ubuntu/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-
-            # Ensure Node.js and NPM are installed
-            if ! type node > /dev/null 2>&1; then
-              echo "Node.js not found. Installing Node.js..."
-              nvm install 20
-              nvm use 20
-              nvm alias default 20
-            fi
-
-            # Ensure Yarn and PM2 are installed
-            if ! command -v yarn &> /dev/null; then
-              echo "Yarn not found. Installing Yarn..."
-              npm install -g yarn
-            fi
-
-            if ! command -v pm2 &> /dev/null; then
-              echo "PM2 not found. Installing PM2..."
-              npm install -g pm2
-            fi
-
-            # Navigate to application directory
-            cd /home/ubuntu/apps/build
-
-            # Install production dependencies
+            cd /home/ubuntu/apps/auth-service/build
             yarn install --production
 
-            # Restart or start the application
-            if pm2 show product-service > /dev/null; then
+            # Check if the PM2 process is running
+            if pm2 show auth-service > /dev/null; then
               echo "Application is running. Restarting..."
-              pm2 restart product-service
+              yarn restart
             else
               echo "Application is not running. Starting..."
-              pm2 start server.js --name product-service
+              yarn start
             fi
