--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Configure npm to use GitHub Packages
         run: |
-          echo "@datacatalog2024:registry=https://npm.pkg.github.com/" > ~/.npmrc
           echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
+          echo "@datacatalog2024:registry=https://npm.pkg.github.com" >> ~/.npmrc
 
       - name: Install dependencies
         run: yarn install
