--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -125,18 +125,30 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            # Load the full user environment for non-interactive shells
-            source /home/ubuntu/.nvm/nvm.sh
-            source /home/ubuntu/.profile
+            # Initialize NVM if it's installed
+            export NVM_DIR="$HOME/.nvm"
+            if [ -s "$NVM_DIR/nvm.sh" ]; then
+              . "$NVM_DIR/nvm.sh"
+            else
+              # Install NVM if it’s not already installed
+              curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
+              . "$NVM_DIR/nvm.sh"
+            fi
 
+            # Install Node.js, Yarn, and PM2 if missing
+            nvm install 20
+            nvm use 20
+            npm install -g yarn pm2
+
+            # Navigate to the application directory and install production dependencies
             cd /home/ubuntu/apps/auth-service/build
             yarn install --production
 
-            # Check if the PM2 process is running
+            # Start or restart the app using PM2 with direct PM2 commands
             if pm2 show auth-service > /dev/null; then
               echo "Application is running. Restarting..."
-              yarn restart
+              pm2 restart auth-service
             else
               echo "Application is not running. Starting..."
-              yarn start
+              pm2 start server.js --name auth-service
             fi
