--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
     "@sentry/node": "^8.37.1",
     "core-js": "^3.39.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "joi": "^17.13.3",
