--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@hookform/resolvers": "^3.9.1",
     "@next/env": "^15.0.1",
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.20.0",
@@ -27,10 +28,12 @@
     "next-seo": "^6.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "sharp": "^0.33.5",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
