--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
     "@sentry/node": "^8.37.1",
+    "@types/cors": "^2.8.17",
     "core-js": "^3.39.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
