--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
+    "@nestjs/common": "^10.4.7",
     "@sentry/node": "^8.37.1",
     "@types/cors": "^2.8.17",
+    "cookie-parser": "^1.4.7",
     "core-js": "^3.39.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@datacatalog2024/ms-libs": "0.0.1",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/joi": "^17.2.3",
