--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "apexcharts": "^4.0.0",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
@@ -48,6 +49,7 @@
     "babel-loader": "^9.2.1",
     "classnames": "^2.5.1",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.3",
     "json-server": "^1.0.0-beta.3",
     "ms-ui-components": "*",
