--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -32,12 +32,14 @@
   },
   "devDependencies": {
     "@datacatalog2024/ms-libs": "0.0.1",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.5",
     "@types/swagger-ui-express": "^4.1.6",
+    "cookie-parser": "^1.4.7",
     "esbuild": "^0.24.0",
     "nodemon": "^3.1.7",
     "pm2": "^5.4.2",
