--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apexcharts": "^4.0.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
@@ -29,7 +30,6 @@
     "@chromatic-com/storybook": "^1.9.0",
     "@playwright/test": "^1.48.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@shadcn/ui": "^0.0.4",
     "@storybook/addon-coverage": "^1.0.4",
     "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
