--- a/apps/backend/api-gateway/package.json
+++ b/apps/backend/api-gateway/package.json
@@ -33,6 +33,7 @@
     "cross-env": "^7.0.3",
     "esbuild": "^0.21.5",
     "esbuild-plugin-copy": "^2.1.1",
+    "express-rate-limit": "^7.4.1",
     "nodemon": "^3.1.4",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
