--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -49,7 +49,9 @@
     "axios": "^1.7.7",
     "babel-loader": "^9.2.1",
     "classnames": "^2.5.1",
+    "cookie-parser": "^1.4.7",
     "css-loader": "^7.1.2",
+    "daisyui": "^4.12.14",
     "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.3",
     "json-server": "^1.0.0-beta.3",
