--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -12,7 +12,9 @@
     "test-storybook": "test-storybook"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "apexcharts": "^4.0.0",
+    "button": "^1.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
