--- a/apps/client-app/package.json
+++ b/apps/client-app/package.json
@@ -19,6 +19,7 @@
     "@tsparticles/slim": "^3.5.0",
     "@types/react-icons": "^3.0.0",
     "@types/three": "^0.169.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
@@ -36,6 +37,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
