--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
