--- a/apps/backend/auth-service/package.json
+++ b/apps/backend/auth-service/package.json
@@ -18,37 +18,33 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.682.0",
-    "@nestjs/common": "^10.4.7",
     "@sentry/node": "^8.37.1",
-    "@types/cors": "^2.8.17",
     "cookie-parser": "^1.4.7",
-    "core-js": "^3.39.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.8.0",
-    "swagger-ui-express": "^5.0.1"
+    "tsoa": "^6.3.1",
+    "swagger-ui-express": "^5.0.1",
+    "@sabaicode-dev/ms-libs": "0.0.2"
   },
   "devDependencies": {
-    "@sabaicode-dev/ms-libs": "0.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.7.5",
+    "@types/node": "^20.14.7",
     "@types/swagger-ui-express": "^4.1.6",
-    "cookie-parser": "^1.4.7",
     "esbuild": "^0.24.0",
     "nodemon": "^3.1.7",
     "pm2": "^5.4.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsoa": "^6.4.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.5.2"
   }
 }
