--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -43,6 +43,7 @@
     "@storybook/react-webpack5": "^8.3.6",
     "@storybook/test": "^8.3.6",
     "@storybook/test-runner": "^0.19.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.7.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
