--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -153,9 +153,10 @@ jobs:
             else
               echo "Application is not running. Starting..."
               pm2 start server.js --name auth-service --update-env
-            fi
-      cleanup:
+
+  cleanup:
     runs-on: ubuntu-latest
+    needs: deploy # Ensure cleanup only runs after deploy finishes
     steps:
       - name: Delete old artifacts
         run: |
