--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -2,15 +2,15 @@ name: CI/CD Pipeline for Auth Service
 
 on:
   pull_request:
-    branches: [analyze]
+    branches: [deploy_auth]
   push:
-    branches: [analyze]
+    branches: [deploy_auth]
 
 defaults:
   run:
     working-directory: ./apps/backend/auth-service
 
-jobs:       
+jobs:
   build:
     runs-on: ubuntu-latest
 
@@ -154,4 +154,3 @@ jobs:
               echo "Application is not running. Starting..."
               pm2 start server.js --name auth-service --update-env
             fi
-      
