--- a/.github/workflows/auth-service.yml
+++ b/.github/workflows/auth-service.yml
@@ -45,7 +45,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/Auth-Service-Smey'
+    if: github.ref == 'refs/heads/deploy_auth'
 
     steps:
       - name: Checkout code
