--- a/apps/dashboard-app/package.json
+++ b/apps/dashboard-app/package.json
@@ -12,6 +12,7 @@
     "test-storybook": "test-storybook"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "add": "^2.0.6",
     "button": "^1.1.1",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
