--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -44,7 +44,6 @@ jobs:
         run: |
           npm run build  # This uses the build script in your package.json which runs Webpack
         continue-on-error: false
-
   deploy:
     runs-on: ubuntu-latest
     needs: build # This job depends on the 'build' job
@@ -67,7 +66,7 @@ jobs:
 
       # Step 4: Deploy to S3
       - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@v1.1.0
+        uses: jakejarvis/s3-sync-action@v2
         with:
           args: --acl public-read --delete # Optional: Deletes old files from the S3 bucket
         env:
@@ -77,14 +76,15 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           SOURCE_DIR: "./apps/dashboard-app/dist" # Ensure this matches the build directory path
 
-      # Optional: Invalidate CloudFront cache (if using CloudFront)
-      - name: Invalidate CloudFront Cache
-        if: success()
-        uses: awslabs/aws-cloudfront-action@v1
-        with:
-          distribution-id: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} # Optional, only if using CloudFront
-          invalidation-path: "/*" # Invalidate all cached paths
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+
+      # # Optional: Invalidate CloudFront cache (if using CloudFront)
+      # - name: Invalidate CloudFront Cache
+      #   if: success()
+      #   run: |
+      #     aws cloudfront create-invalidation \
+      #       --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} \
+      #       --paths "/*"
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     AWS_REGION: ${{ secrets.AWS_REGION }}
