--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -74,7 +74,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: "./apps/dashboard-app/build" # Update this path to match your build output
+          SOURCE_DIR: "apps/dashboard-app/build" # Update this path to match your build output
 
 
       # # Optional: Invalidate CloudFront cache (if using CloudFront)
