fixed Deploy to S3 paht

--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -44,6 +44,12 @@ jobs:
         run: |
           npm run build  # This uses the build script in your package.json which runs Webpack
         continue-on-error: false
+
+      # Debug: Check if the build directory exists
+      - name: Check build directory
+        run: |
+          ls -R ./apps/dashboard-app
+
   deploy:
     runs-on: ubuntu-latest
     needs: build # This job depends on the 'build' job
@@ -60,9 +66,14 @@ jobs:
         with:
           node-version: "20" # Ensure consistency in Node.js version across jobs
 
-      # Step 3: Install dependencies (in case it's needed in deploy job)
-      - name: Install Dependencies
-        run: npm install
+      # Step 3: Cache node modules (deploy job)
+      - name: Cache node modules (deploy job)
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
 
       # Step 4: Deploy to S3
       - name: Deploy to S3
@@ -74,10 +85,10 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: "apps/dashboard-app/build" # Update this path to match your build output
+          SOURCE_DIR: "apps/dashboard-app/build" # Ensure this path is correct
 
 
-      # # Optional: Invalidate CloudFront cache (if using CloudFront)
+      # Optional: Invalidate CloudFront cache (if using CloudFront)
       # - name: Invalidate CloudFront Cache
       #   if: success()
       #   run: |
