--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -47,25 +47,27 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build # This job depends on the 'build' job
-    if: github.ref == 'refs/heads/deploy_dashboard_app'
+    needs: build
+    if:
+      github.ref == 'refs/heads/deploy_dashboard_app'
+      # Set working directory explicitly for the deploy step
+    working-directory: ./apps/dashboard-app
 
     steps:
-      # Step 1: Checkout the repository code (for the deploy job)
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js environment
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20" # Ensure consistency in Node.js version across jobs
+          node-version: "20"
 
-      # Step 3: Install dependencies (in case it's needed in deploy job)
       - name: Install Dependencies
         run: npm install
 
-      # Step 4: Deploy to S3
+      - name: List build directory
+        run: ls -R ./build # This confirms the build output
+
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@v0.5.1
         with:
@@ -75,7 +77,8 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: "./apps/dashboard-app/build" # Verify this path exists
+          SOURCE_DIR: "build" # Make sure this path is correct based on the previous step's output
+
 
       # Optional: Invalidate CloudFront cache (if using CloudFront)
       # - name: Invalidate CloudFront Cache
