--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -48,10 +48,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if:
-      github.ref == 'refs/heads/deploy_dashboard_app'
-      # Set working directory explicitly for the deploy step
-    working-directory: ./apps/dashboard-app
+    if: github.ref == 'refs/heads/deploy_dashboard_app'
 
     steps:
       - name: Checkout Code
