--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -62,6 +62,13 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      # Debug: List files in build directory
+      - name: List files in the build directory
+        run: |
+          echo "Listing files in the apps/dashboard-app directory"
+          ls -R ./apps/dashboard-app
+
+      # Ensure correct path to the build directory
       - name: List build directory
         run: ls -R ./apps/dashboard-app/build # Confirm the build output directory exists
 
