--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -19,6 +19,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Debug: List files in the root of the repository to confirm structure
+      - name: List files in the root directory
+        run: |
+          echo "Listing files in the root of the repository"
+          ls -R # List the entire directory structure of the repository to verify if apps/dashboard-app exists
+
       # Step 2: Set up Node.js environment
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -45,12 +51,6 @@ jobs:
           npm run build  # This uses the build script in your package.json which runs Webpack
         continue-on-error: false
 
-      # Debugging: List files to see if the build directory exists
-      - name: List files in the working directory
-        run: |
-          echo "Listing files in the ./apps/dashboard-app directory"
-          ls -R ./apps/dashboard-app  # Check if the build directory exists
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -65,13 +65,19 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 1: Set up Node.js
+      # Debug: List files in the root directory again
+      - name: List files in the root directory again
+        run: |
+          echo "Listing files in the root of the repository"
+          ls -R  # Confirm directory structure
+
+      # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "20"
 
-      # Step 2: Install Dependencies
+      # Step 1: Install Dependencies
       - name: Install Dependencies
         run: npm install
 
