--- a/.github/workflows/dashboard-app.yml
+++ b/.github/workflows/dashboard-app.yml
@@ -91,7 +91,7 @@ jobs:
       # Debug: List files in the build directory
       - name: List files in the build directory
         run: |
-          echo "Listing files in the ./build directory"
+          echo "Listing files in the build directory"
           tree -L 2  # Check if the build directory exists
 
       # Deploy to S3
@@ -104,7 +104,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: "build" # Correct build directory path
+          SOURCE_DIR: "./build" # Correct build directory path
 
 
       # Optional: Invalidate CloudFront cache (if using CloudFront)
